# stock-logistics-availability

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
setup/stock_quant_available_quantity/odoo/addons/: stock_quant_available_quantity
stock_available_exclude_location/: README.rst
stock_available_exclude_location/i18n/: it.po
stock_available_exclude_location/static/description/: index.html
stock_available_immediately/: README.rst
stock_available_immediately/static/description/: index.html
stock_available_location_get_domain/i18n/: it.po
stock_available_mrp/i18n/: tr.po
stock_free_quantity/: README.rst  __manifest__.py
stock_free_quantity/static/description/: index.html
stock_free_quantity/views/: product_product_view.xml  product_template_view.xml
stock_picking_product_availability_inline/: README.rst  __manifest__.py
stock_picking_product_availability_inline/readme/: CONTRIBUTORS.md
stock_picking_product_availability_inline/static/description/: index.html
stock_quant_available_quantity/: README.rst  __manifest__.py
