[project]
name = "odoo-addons-oca-stock-logistics-availability"
version = "18.0.20250218.0"
dependencies = [
    "odoo-addon-stock_free_quantity==18.0.*",
    "odoo-addon-stock_picking_product_availability_inline==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
